--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,7 @@
     }
     .play-ground{
       position: absolute;
-      width: 500px;
+      width: 50vw;
       height: 500px;
       top: 100px;
       left: 100px;
