new feature：add refline

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <style>
+    *{
+      margin: 0;
+      padding: 0;
+    }
     .action{
 
     }
@@ -23,62 +27,79 @@
 <body>
 <div id="app">
 
-  <div class="action">
-    <label for="">x</label>
-    <input type="number" :value="x" @change="onXinput">
-    <label for="">y</label>
-    <input type="number" :value="y" @change="onYinput">
-  </div>
+  <!--<div class="action">-->
+    <!--<label for="">x</label>-->
+    <!--<input type="number" :value="x" @change="onXinput">-->
+    <!--<label for="">y</label>-->
+    <!--<input type="number" :value="y" @change="onYinput">-->
+  <!--</div>-->
 
-  <div class="play-ground">
+  <!--<div class="play-ground">-->
     <zw-drag-resize
-            :x="50"
-            :y="50"
-            :h="100"
-            :w="100"
-            :parent="true"
-            :anchor="'bottom-right'"
-            @resizing="resizing"
+            :x="300"
+            :y="300"
+            ref="item"
+    >
+      <div style="height: 100%; background:#000;"></div>
+    </zw-drag-resize>
+    <zw-drag-resize
+            ref="drag"
+            :x="600"
+            :y="320"
             @dragging="dragging"
-            @resizestop="resizestop"
             @dragstop="dragstop"
     >
       <div style="height: 100%; background:#000;"></div>
     </zw-drag-resize>
-  </div>
-
+  <!--</div>-->
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
+<script src="refline.js"></script>
 <script src="../dist/index.js"></script>
 <script>
-  // console.log(zwDragResize.default);
+  const refline = new RefLine({gap: 3});
+
   const app = new Vue({
     el:'#app',
     data:{
-      x: 50,
-      y: 50,
+      x: 600,
+      y: 320,
     },
     components:{
       'zw-drag-resize': zwDragResize.default,
     },
+    mounted(){
+      // console.log(this.$refs.drag.$el);
+      // console.log(this.$refs.item.$el.getBoundingClientRect())
+    },
     methods:{
       onXinput(e){
-        console.log(e)
-        this.x = e.target.valueAsNumber
+        // this.x = e.target.valueAsNumber
       },
       onYinput(e){
-        console.log(e)
-        this.y = e.target.valueAsNumber
+        // console.log(e)
+        // this.y = e.target.valueAsNumber
       },
       resizing(e){
         // console.log('resizing',e)
       },
       dragging(e){
         // console.log('dragging',e)
+        // const {top,left} = e;
+        // const pos = refline.check(this.$refs.drag.$el,'.vdr')
+        // // console.log(pos);
+        // this.x = left;
+        // this.y = top;
+        //
+        // setTimeout(()=>{
+        //   if(pos.left) this.x = pos.left;
+        //   if(pos.top) {this.y = pos.top;}
+        // },100);
       },
       resizestop(e){
         // console.log('resizestop',e)
+        // refline.check(this.$refs.drag,'.vdr')
       },
       dragstop(e){
         // console.log('dragstop',e)
